# viewfinder

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SHRAPNEL_PLAN.md  VIEWFINDER_API.md  pyproject.toml
chrome-extension/: README.md  content.css  content.js  manifest.json  popup.html  popup.js
src/viewfinder/: __init__.py  auth.py  cli.py  formatters.py  ingest.py  models.py  parsing.py  screenshots.py  server.py  storage.py  summarize.py  transcript.py
src/viewfinder/static/: index.html
tests/: conftest.py  test_auth.py  test_formatters.py  test_ingest.py  test_integration.py  test_models.py  test_parsing.py  test_screenshots.py  test_server.py  test_storage.py  test_summarize.py
