[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viewfinder"
version = "0.2.0"
description = "YouTube video ingestion engine -- transcripts, screenshots, and AI summarization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Precipitous LLC" },
]
keywords = ["youtube", "transcript", "summarization", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2024.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0",
]
storage = [
    "aiosqlite>=0.20.0",
]

[project.scripts]
viewfinder = "viewfinder.cli:main"

[project.urls]
Homepage = "https://github.com/precipitous/viewfinder"
Repository = "https://github.com/precipitous/viewfinder"
Issues = "https://github.com/precipitous/viewfinder/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require internet access (may fail from cloud IPs)",
]
